# GameGUI

./: .gitmodules  CMakeLists.txt  README.md
cmake/: Findgtest.cmake
configFiles/: CMakeLists.txt  Config.hpp.in
doc/: Doxyfile
src/: CMakeLists.txt
src/core/: CMakeLists.txt  GUIObject.cpp  GUIObject.hpp  Layout.cpp  Layout.hpp  Widget.cpp  Widget.hpp  coreGlobal.hpp
src/core/unit_tests/: CMakeLists.txt  GUIObjectTest.cpp  GUIObjectTest.hpp  LayoutTest.cpp  LayoutTest.hpp  main.cpp
src/widgets/: Button.cpp  Button.hpp  CMakeLists.txt  Image.cpp  Image.hpp  TextBox.cpp  TextBox.hpp  widgetsGlobal.hpp
src/widgets/unit_tests/: ButtonTest.cpp  ButtonTest.hpp  CMakeLists.txt  TextBoxTest.cpp  TextBoxTest.hpp  main.cpp
